# r-orchestrator

./: .gitignore  Dockerfile.agent  Dockerfile.server  Makefile  README.md  buf.gen.yaml  buf.yaml  control.pb.go  control_grpc.pb.go  go.mod  go.sum  gqlgen.yml  kind-k8s.config
.github/workflows/: dev.yml
agent/: Cargo.toml  build.rs
agent/src/: artifacts.rs  config.rs  control_client.rs  control_client_result_ready_tests.rs  executor.rs  main.rs  oss.rs  pending_result.rs  tests.rs
chart/: r-orchestrator.values.yaml
chart/r-orchestrator/: Chart.yaml  values.yaml
cmd/server/: grpc_server.go  grpc_server_test.go  main.go
docs/api/: graphql-examples.md  graphql-task-api.md
graph/: task.resolvers.go  task_resolvers_test.go  tenant.resolvers.go
graph/model/: models_gen.go  uuid.go
graph/schema/: task.graphqls  tenant.graphqls
internal/auth/: token.go
internal/config/: config.go  config_test.go  load_env.go  load_env_test.go  logger.go
internal/control/: agent.go  cleanup_orphan_shards.go  fetch_artifact.go  handle_agent_timeout.go  handle_heartbeat.go  handle_reconnected_agent.go  handle_shard_failed.go  handle_shard_result_data.go  handle_shard_result_ready.go  handle_shard_started.go  notify_cancel_shard.go  reset_registered_agent_to_idle.go  reset_timeout_shards.go  result_pull_flow_test.go  server.go  try_assign_shard.go  validate_metadata_token.go
internal/model/: artifact.go  base_uuid_model.go  cluster.go  task.go  task_shard.go  tenant.go
proto/: control.pb.go  control.proto  control_grpc.pb.go  control_test.go
test-data/: params.csv
(+108 files in other folders)
