[package]
name = "agent"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs"] }
tokio-stream = "0.1"
csv = "1"
zip = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2 = "0.10"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
